# Neural-Market

./: .dvcignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/data/: spy_daily_databento.yaml
configs/reproducibility/: default.yaml
data/: README.md
data/manifests/: README.md  acquisition_policy_v1.json  pilot_request_plan_v1.json  source_manifest_v1.json  split_manifest_v1.json
data_contracts/: acquisition_plan.schema.json  acquisition_policy.schema.json  billing_reconciliation.schema.json  metadata_cost_snapshot.schema.json  option_definition.schema.json  option_quote_snapshot.schema.json  pilot_authorization.schema.json  pilot_execution.schema.json  pilot_metadata_checkpoint.schema.json  pilot_portal_attestation.schema.json  pilot_purchase_authorization.schema.json  pilot_quality_report.schema.json  pilot_request_plan.schema.json  portal_limit_attestation.schema.json  rejected_record.schema.json  source_manifest.schema.json  split_manifest.schema.json  underlying_daily.schema.json  underlying_quote_snapshot.schema.json
docs/data/: acquisition_policy.md  canonical_contracts.md  data_lineage.md  guarded_pilot.md  lineage.md  pilot_acquisition.md  source_selection.md  split_policy.md
docs/engineering/: repository_standards.md  reproducibility.md
reports/data/: README.md  opra_unit_price_final_diagnostic_probe.md  opra_unit_price_live_validation.md  pilot_purchase_authorization_packet.md  resilient_metadata_preflight_completion.md
reports/environment/: README.md
reports/protocol/: research_protocol_amendment_001.md  research_protocol_amendment_002.md  research_protocol_amendment_003.md  research_protocol_amendment_004.md  research_protocol_amendment_005.md  research_protocol_amendment_007.md  research_protocol_amendment_008.md  research_protocol_amendment_009.md  research_protocol_amendment_010.md  research_protocol_amendment_011.md  research_protocol_amendment_012.md  research_protocol_v1.md
scripts/: bootstrap.ps1  verify.ps1
src/neuralmarket/: __init__.py  __main__.py
tests/integration/: test_acquisition_cli.py  test_data_cli.py  test_environment_cli.py  test_live_cost_recheck_cli.py  test_pilot_cli.py
tests/unit/: test_cli_entrypoints.py  test_configuration.py  test_environment.py  test_imports.py  test_reproducibility.py
(+111 files in other folders)
