[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "neuralmarket"
version = "0.1.0"
description = "Research-grade foundation for conditional neural SDE market simulation and cost-aware hedging."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Proprietary" }
authors = [{ name = "NeuralMarket" }]
keywords = ["quantitative-finance", "neural-sde", "reproducibility", "research"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Private :: Do Not Upload",
]
dependencies = [
    "numpy>=1.26,<3.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "PyYAML>=6.0,<7.0",
    "typer>=0.12,<0.16",
    "rich>=13.7,<15.0",
    "platformdirs>=4.2,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9.0",
    "pytest-cov>=5.0,<7.0",
    "hypothesis>=6.100,<7.0",
    "ruff>=0.5,<0.13",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<5.0",
    "detect-secrets>=1.5,<2.0",
    "types-PyYAML>=6.0,<7.0",
]

[project.scripts]
neuralmarket = "neuralmarket.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/neuralmarket"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103", "D104"]
# Typer requires function-call defaults (typer.Option) in command signatures.
"src/neuralmarket/cli/main.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
files = ["src"]

# PyTorch is intentionally deferred and not a dependency of this foundation.
[[tool.mypy.overrides]]
module = ["torch"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests spanning multiple components or the CLI",
]

[tool.coverage.run]
branch = true
source = ["neuralmarket"]

[tool.coverage.report]
show_missing = true
fail_under = 85
